--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!--<button onclick="clearLogs()" class="log-btn clear-btn">Clear Local Logs</button>-->
       <!--<button onclick="openGoogleSheet()" class="log-btn view-btn">View All Logs</button>-->
       <!--<button onclick="testGoogleSheetsLogging()" class="log-btn test-btn">Test Sheets Logging</button>-->
-      <button id="nfcButton">Scan NFC</button>
+      <button onclick="startNFC()">Scan NFC</button>
       <span id="logCount" class="log-count">Local Logs: 0</span>
     </div>
   </div>
